[package]
name = "adventofcode-2016"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.0"
clap = { version = "4.0.29", features = ["derive"] }
counter = "0.5.7"
lazy_static = "1.4.0"
md5 = "0.7.0"
regex = "1.7.0"
