[package]
name = "adventofcode-2019"
version = "0.1.0"
authors = ["Harrison McCullough <harrison.mccullough@romariccorp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.10"
# array2d = { version = "0.2", git = "https://github.com/HarrisonMc555/array2d.git" }
array2d = { path = "../../array2d" }
num-bigint = "0.3.1"
num-iter = "0.1.39"
lazy_static = "1.4.0"
regex = "1.3"
itertools = "0.9"
