[package]
name = "adventofcode-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.0"
bitflags = "1.3.2"
clap = { version = "4.0.29", features = ["derive"] }
counter = "0.5.7"
enum-ordinalize = "3.1.12"
itertools = "0.10.5"
lazy_static = "1.4.0"
pretty_assertions = "1.3.0"
regex = "1.7.0"
