[package]
name = "adventofcode-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.0"
clap = { version = "4.4.10", features = ["derive"] }
enum-ordinalize = "4.2.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
